--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "countries[]"
+   ]
   },
   {
    "cell_type": "code",
