--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -425,7 +427,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = set.list"
    ]
   },
   {
